kubernetes/base/order-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: techshop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - name: order-service
          image: techshop-order-service:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8003
          livenessProbe:
            httpGet:
              path: /orders
              port: 8003
            initialDelaySeconds: 10
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /orders
              port: 8003
            initialDelaySeconds: 5
            periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: techshop
spec:
  type: NodePort
  selector:
    app: order-service
  ports:
    - port: 8003
      targetPort: 8003
      nodePort: 30013
