kubernetes/base/product-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
  namespace: techshop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
    spec:
      containers:
        - name: product-service
          image: techshop-product-service:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8002
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
          livenessProbe:
            httpGet:
              path: /products
              port: 8002
            initialDelaySeconds: 10
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /products
              port: 8002
            initialDelaySeconds: 5
            periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: techshop
spec:
  type: NodePort
  selector:
    app: product-service
  ports:
    - port: 8002
      targetPort: 8002
      nodePort: 30012
