kubernetes/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: techshop-ingress
  namespace: techshop
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - techshop.local
      secretName: techshop-tls-secret
  rules:
    - host: techshop.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 3000
