kubernetes/base/networkpolicy-postgres.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: restrict-postgres
  namespace: techshop
spec:
  podSelector:
    matchLabels:
      app: postgres
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: user-service
        - podSelector:
            matchLabels:
              app: product-service
        - podSelector:
            matchLabels:
              app: order-service
      ports:
        - protocol: TCP
          port: 5432
